# crypt_compress_axum_server

./: Cargo.toml  README.md  test.sh
src/: app.rs  handlers.rs  lib.rs  main.rs  util.rs
src/bests/: bestAsync.rs  bestSync.rs
